force-app/main/default/objects/CAObj1__c/CAObj1__c.object-meta.xml
<CustomObject>
    <description>&lt;sai test1&gt; and sai.test and 
sai?test2 
Sai*test3 &amp; tes4
sai $ Test5
sai % testg6
sai # test7
sai ^ test8
sai @ test9
sai.test10
sai,test11
sai:test12
sai/test13
sai(test14)
sai[test15]
sai{test16}
sai|test17
sai\test18
sai/test19
sai:test20
sai;test21
sai&apos;test22
test+23
sai=24
sai-25
sai_26
sai   27
sai!28
sai`29
sai~30</description>
    <label>CAObj1</label>
    <nameField>
        <label>CAObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CAObj1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>