force-app/main/default/objects/CAObj1__c/fields/CAField1__c.field-meta.xml
<CustomField>
    <fullName>CAField1__c</fullName>
    <label>CAField1</label>
    <type>Email</type>
</CustomField>