force-app/main/default/objects/CAObj1__c/fields/CAField2__c.field-meta.xml
<CustomField>
    <fullName>CAField2__c</fullName>
    <label>CAField2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>123</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>