force-app/main/default/objects/CAObj1__c/fields/CAField3__c.field-meta.xml
<CustomField>
    <fullName>CAField3__c</fullName>
    <label>CAField3</label>
    <length>8</length>
    <type>Text</type>
</CustomField>